# orolia_demo

./: .gitignore  CMakeLists.txt  Makefile  Makefile.toolchain.example
src/: CMakeLists.txt  demo.cpp  demo_gui.cpp  demo_gui.hpp
src/collector/: CMakeLists.txt  collector.cpp  collector.hpp  compressor.cpp  compressor.hpp  data_source.cpp  data_source.hpp
tests/: CMakeLists.txt  test_compressor.cpp  test_data_source.cpp  units_tests.cpp
